Fix misaligned events

--- a/assets/timeline.scss
+++ b/assets/timeline.scss
@@ -132,7 +132,8 @@ $primary-color-hover: scale-color($primary-color, $lightness: 32%);
       }
     }
     figure {
-      margin-right: 50%;
+      width: calc(50% - 36px);
+      margin-right: calc(50% - 24px);
       text-align: right;
     }
   }
@@ -146,7 +147,8 @@ $primary-color-hover: scale-color($primary-color, $lightness: 32%);
       }
     }
     figure {
-      margin-left: calc(50% + 30px);
+      width: calc(50% - 12px);
+      margin-left: calc(50% + 12px);
       text-align: left;
     }
   }
@@ -366,7 +368,6 @@ $primary-color-hover: scale-color($primary-color, $lightness: 32%);
     .timeline-marker {
       position: absolute;
       left: 50%;
-      margin-left: -7.5px;
     }
     .timeline-info,
     .timeline-content {
@@ -380,7 +381,7 @@ $primary-color-hover: scale-color($primary-color, $lightness: 32%);
     > .timeline-item.odd .timeline-content {
       float: left;
       text-align: right;
-      padding-right: 30px;
+      padding-right: 36px;
     }
     > .timeline-item.even .timeline-info {
       float: left;
@@ -390,7 +391,7 @@ $primary-color-hover: scale-color($primary-color, $lightness: 32%);
     > .timeline-item.even .timeline-content {
       float: right;
       text-align: left;
-      padding-left: 30px;
+      padding-left: 12px;
     }
     > .timeline-item.period .timeline-content {
       float: none;
